[gd_scene load_steps=18 format=3 uid="uid://6powm7ymtvo"]

[ext_resource type="Script" path="res://chars/enemy/Enemy.gd" id="1_wm8q5"]
[ext_resource type="PackedScene" uid="uid://dpjdgra0p6wu4" path="res://assets/monsters/Skeleton.fbx" id="2_5nqjt"]
[ext_resource type="Script" path="res://Components/Hittable/Hitter.gd" id="3_pcy38"]
[ext_resource type="PackedScene" uid="uid://dejrh0kplo1ig" path="res://Components/HealthBar/Healthbar.tscn" id="4_f0nob"]
[ext_resource type="Script" path="res://Components/Hittable/Hittable.gd" id="5_2limn"]
[ext_resource type="PackedScene" uid="uid://cvksjt4n8s5qw" path="res://Components/Footsteps/FootStepGenerator.tscn" id="6_k2jki"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_h5370"]
properties/0/path = NodePath(".:syncedPosition")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:syncedTargetPlayerId")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:health")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0k03l"]
animation = &"SkeletonArmature|Skeleton_Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_60afp"]
animation = &"SkeletonArmature|Skeleton_Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2odqa"]
animation = &"SkeletonArmature|Skeleton_Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qn775"]
animation = &"SkeletonArmature|Skeleton_Idle"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_dt0ln"]
filter_enabled = true
filters = ["RootNode/SkeletonArmature/Skeleton3D:Head", "RootNode/SkeletonArmature/Skeleton3D:Hips", "RootNode/SkeletonArmature/Skeleton3D:L.DownLeg.001", "RootNode/SkeletonArmature/Skeleton3D:L.UpperLeg.001", "RootNode/SkeletonArmature/Skeleton3D:R.DownLeg.001", "RootNode/SkeletonArmature/Skeleton3D:R.UpperLeg.001", "RootNode/SkeletonArmature/Skeleton3D:Torso"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_h6301"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_4p0h6"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_tchcn"]
graph_offset = Vector2(-97.6697, -51.8435)
nodes/Animation/node = SubResource("AnimationNodeAnimation_qn775")
nodes/Animation/position = Vector2(280, 60)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_0k03l")
"nodes/Animation 2/position" = Vector2(360, 200)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_60afp")
"nodes/Animation 3/position" = Vector2(720, 340)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_2odqa")
"nodes/Animation 4/position" = Vector2(1160, 340)
nodes/Attack/node = SubResource("AnimationNodeOneShot_dt0ln")
nodes/Attack/position = Vector2(1140, 60)
nodes/Death/node = SubResource("AnimationNodeBlend2_h6301")
nodes/Death/position = Vector2(1480, 60)
nodes/Run/node = SubResource("AnimationNodeBlend2_4p0h6")
nodes/Run/position = Vector2(800, 60)
nodes/output/position = Vector2(1980, 60)
node_connections = [&"Attack", 0, &"Run", &"Attack", 1, &"Animation 3", &"Death", 0, &"Attack", &"Death", 1, &"Animation 4", &"Run", 0, &"Animation", &"Run", 1, &"Animation 2", &"output", 0, &"Death"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2glsp"]
radius = 0.35

[sub_resource type="SphereShape3D" id="SphereShape3D_8ejw0"]
radius = 0.9

[node name="Skelly" type="CharacterBody3D"]
script = ExtResource("1_wm8q5")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_h5370")

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
deterministic = false
root_node = NodePath("%Direction")
tree_root = SubResource("AnimationNodeBlendTree_tchcn")
anim_player = NodePath("../Direction/AnimationPlayer")
parameters/Attack/active = false
parameters/Attack/internal_active = false
parameters/Attack/request = 0
parameters/Death/blend_amount = 0.0
parameters/Run/blend_amount = 0.4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_2glsp")

[node name="Direction" parent="." instance=ExtResource("2_5nqjt")]
unique_name_in_owner = true
transform = Transform3D(-0.4, 0, -3.49691e-08, 0, 0.4, 0, 3.49691e-08, 0, -0.4, 0, 0, 0)

[node name="RootNode" parent="Direction" index="0"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Direction/RootNode/SkeletonArmature" index="0"]
bones/0/position = Vector3(0, -4.83365e-22, 0.00456865)
bones/1/position = Vector3(1.19806e-05, 0.0061847, -1.13028e-21)
bones/1/rotation = Quaternion(6.13851e-24, -1.3191e-23, -0.00167142, 0.999999)
bones/3/rotation = Quaternion(-0.000890915, 0.0349894, 0.103937, 0.993968)
bones/5/position = Vector3(-0.00140506, -0.00403509, 0.00512165)
bones/5/rotation = Quaternion(0.982512, -0.182753, -0.00651874, 0.035045)
bones/6/rotation = Quaternion(0.0602722, -0.708176, 0.0340685, 0.702633)
bones/8/position = Vector3(0.0022327, -0.00203213, -0.00507784)
bones/8/rotation = Quaternion(0.982868, 0.178223, -0.00838289, -0.0462327)
bones/9/rotation = Quaternion(0.0855395, -0.691913, 0.126332, 0.705676)
bones/11/rotation = Quaternion(0.970999, 0.132974, 0.028465, 0.196643)
bones/12/rotation = Quaternion(-0.0450941, -0.661032, -0.162254, 0.731216)
bones/14/rotation = Quaternion(0.962242, -0.177317, 0.0351232, -0.203507)
bones/15/rotation = Quaternion(-0.0957954, -0.702588, 0.0455039, 0.70365)

[node name="Hitter" type="Area3D" parent="Direction" node_paths=PackedStringArray("controller")]
unique_name_in_owner = true
transform = Transform3D(-2.5, 0, 2.18557e-07, 0, 2.5, 0, -2.18557e-07, 0, -2.5, 0, 0, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_pcy38")
controller = NodePath("../..")
knockbackForce = 10.0
damage = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Direction/Hitter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.6)
shape = SubResource("SphereShape3D_8ejw0")

[node name="Healthbar" parent="." instance=ExtResource("4_f0nob")]
unique_name_in_owner = true
transform = Transform3D(0.35, 0, 2.4869e-15, 0, 0.35, 0, -2.4869e-15, 0, 0.35, 0, 2.37812, 0)

[node name="Hittable" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("5_2limn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hittable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_2glsp")

[node name="FloorRayCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -0.01, 0)

[node name="FootStepGenerator" parent="." instance=ExtResource("6_k2jki")]

[connection signal="hit" from="Hittable" to="." method="_on_hittable_hit"]

[editable path="Direction"]
